<?xml version="1.0"?>
<package format="3">
  <name>ustrov_control</name>
  <version>0.1.0</version>
  <description>USTROV external low-level control core: PID control law, thrust allocation, state estimation interface.</description>
  <maintainer email="ustrov@todo.com">ustrov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
