<?xml version="1.0"?>
<package format="3">
  <name>ustrov_px4</name>
  <version>0.1.0</version>
  <description>PX4 hardware interface: actuator backend, mode interface, manual control, monitoring.</description>
  <maintainer email="ustrov@todo.com">ustrov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ustrov_control</depend>

  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
