<?xml version="1.0"?>
<package format="3">
  <name>ustrov_sensor_bridge</name>
  <version>0.1.0</version>
  <description>Sensor bridges: convert device-specific messages to EKF-consumable standard ROS topics.</description>
  <maintainer email="ustrov@todo.com">ustrov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>dvl_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
