<?xml version="1.0"?>
<package format="3">
  <name>ustrov_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulation: thruster backend, simulated sensors, error analysis, visual localization.</description>
  <maintainer email="ustrov@todo.com">ustrov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ustrov_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
